--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,7 +1,7 @@
 # Brazilian Portuguese translation of gst-plugins-base.
-# Copyright (C) 2008-2013 Free Software Foundation, Inc.
+# Copyright (C) 2008-2015 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gst-plugins-base package.
-# Fabrício Godoy <skarllot@gmail.com>, 2008-2013.
+# Fabrício Godoy <skarllot@gmail.com>, 2008-2015.
 #
 # PCM -> PCM
 # buffering -> preenchendo buffer
@@ -9,10 +9,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base-1.2.1\n"
+"Project-Id-Version: gst-plugins-base-1.4.1\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-18 12:05+0100\n"
-"PO-Revision-Date: 2013-12-29 17:33-0300\n"
+"POT-Creation-Date: 2015-06-07 12:37+0200\n"
+"PO-Revision-Date: 2015-02-01 19:21-0200\n"
 "Last-Translator: Fabrício Godoy <skarllot@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <ldpbr-translation@lists.sourceforge."
 "net>\n"
@@ -530,12 +530,14 @@ msgid ""
 "Don't exit after showing the initial device list, but wait for devices to "
 "added/removed."
 msgstr ""
+"Não sair após exibir a lista inicial de dispositivos, mas sim, esperar por "
+"dispositivos serem adicionados ou removidos."
 
 msgid "Buffering..."
 msgstr "Preenchendo buffer..."
 
 msgid "Clock lost, selecting a new one\n"
-msgstr ""
+msgstr "Temporizador perdido, selecionando um novo\n"
 
 msgid "Video sink to use (default is autovideosink)"
 msgstr ""
@@ -549,16 +551,16 @@ msgid "Enable gapless playback"
 msgstr "Ativar reprodução sem intervalos"
 
 msgid "Shuffle playlist"
-msgstr ""
+msgstr "Embaralhar lista de reprodução"
 
 msgid "Interactive control via keyboard"
-msgstr ""
+msgstr "Controle interativo via teclado"
 
 msgid "Volume"
-msgstr ""
+msgstr "Volume"
 
 msgid "Playlist file containing input media files"
-msgstr ""
+msgstr "Arquivo de lista de reprodução que contém arquivos de mídia de entrada"
 
 #, c-format
 msgid "Usage: %s FILE1|URI1 [FILE2|URI2] [FILE3|URI3] ..."
