--- a/po/tr.po
+++ b/po/tr.po
@@ -1,19 +1,22 @@
 # translation of gst-plugins-base-1.0.3.po to Turkish
 # This file is put in the public domain.
+# This file is distributed under the same license as the gst-plugins-base package.
 # Server Acim <serveracim@gmail.com>, 2010.
-# Server Acim <serveracim@gmail.com>, 2013.
+# Server Acim <serveracim@gmail.com>, 2013, 2015.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 1.0.3\n"
+"Project-Id-Version: gst-plugins-base 1.4.1\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-18 12:05+0100\n"
-"PO-Revision-Date: 2013-03-10 12:46+0200\n"
-"Last-Translator: Server Acim <serveracim@gmail.com>\n"
+"POT-Creation-Date: 2015-06-07 12:37+0200\n"
+"PO-Revision-Date: 2015-01-10 21:07+0100\n"
+"Last-Translator: Volkan Gezer <volkangezer@gmail.com>\n"
 "Language-Team: Turkish <gnu-tr-u12a@lists.sourceforge.net>\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Lokalize 1.5\n"
 
 msgid "Could not open device for playback in mono mode."
 msgstr "Mono kipte çalmak için aygıt açılamıyor."
@@ -36,7 +39,7 @@ msgid "Could not open audio device for playback."
 msgstr "Aygıtı çalma için açamıyor."
 
 msgid "Error outputting to audio device. The device has been disconnected."
-msgstr ""
+msgstr "Ses aygıtına çıktı gönderilirken hata. Aygıt bağlantısı kesildi."
 
 msgid "Could not open device for recording in mono mode."
 msgstr "Mono kipte kaydetmek için aygıtı açamıyor."
@@ -59,7 +62,7 @@ msgid "Could not open audio device for recording."
 msgstr "Kayıt için ses aygıtı açılamıyor."
 
 msgid "Error recording from audio device. The device has been disconnected."
-msgstr ""
+msgstr "Ses aygıtından kayıt sırasında hata. Aygıt bağlantısı kesildi."
 
 msgid "Could not open CD device for reading."
 msgstr "Okumak için CD aygıtı açılamıyor."
@@ -87,9 +90,8 @@ msgstr "Akışın türü belirlenemiyor"
 msgid "This appears to be a text file"
 msgstr "Bu bir metin dosyasına benziyor"
 
-#, fuzzy
 msgid "Could not create \"uridecodebin\" element."
-msgstr "\"decodebin\" öğesi oluşturulamıyor."
+msgstr "\"uridecodebin\" ögesi oluşturulamıyor."
 
 #, c-format
 msgid "Both autovideosink and %s elements are missing."
@@ -201,7 +203,7 @@ msgid "Run-length encoding"
 msgstr "Çalıştırma-uzunluğu kodlaması"
 
 msgid "Timed Text"
-msgstr ""
+msgstr "Zamanlanmış Metin"
 
 msgid "Subtitle"
 msgstr "Altyazı"
@@ -230,25 +232,25 @@ msgstr "Sıkıştırılmamış video"
 msgid "Uncompressed gray"
 msgstr "Sıkıştırılmamış gri resim"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Uncompressed packed YUV %s"
-msgstr "Sıkıştırılmamış paket YUV 4:2:2"
+msgstr "Sıkıştırılmamış paket YUV %s"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Uncompressed semi-planar YUV %s"
-msgstr "Sıkıştırılmamış planar YUV 4:2:0"
+msgstr "Sıkıştırılmamış yarı düzlem YUV %s"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Uncompressed planar YUV %s"
-msgstr "Sıkıştırılmamış planar YUV 4:2:0"
+msgstr "Sıkıştırılmamış düzlem YUV %s"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Uncompressed palettized %d-bit %s"
-msgstr "Şıkıştırılmamış ses seviyesi %s%d-bit %s"
+msgstr "Sıkıştırılmamış paletlenmiş %d-bit %s"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Uncompressed %d-bit %s"
-msgstr "Şıkıştırılmamış ses seviyesi %s%d-bit %s"
+msgstr "Şıkıştırılmamış %d-bit %s"
 
 #, c-format
 msgid "DivX MPEG-4 Version %d"
@@ -500,52 +502,54 @@ msgid "unparsed id3v2 tag frame"
 msgstr "ayrıştırılmamış id3v2 etiket çerçevesi"
 
 msgid "musical-key"
-msgstr ""
+msgstr "müzik anahtarı"
 
 msgid "Initial key in which the sound starts"
-msgstr ""
+msgstr "Sesin başladığı başlangıç anahtarı"
 
 msgid "Print version information and exit"
-msgstr ""
+msgstr "Sürüm bilgisini yaz ve çık"
 
 msgid ""
 "Don't exit after showing the initial device list, but wait for devices to "
 "added/removed."
 msgstr ""
+"Başlangıç aygıt listesini gösterdikten sonra kapanma, eklenecek/çıkartılacak "
+"aygıtları bekle."
 
 msgid "Buffering..."
-msgstr ""
+msgstr "Tampon belleğe alınıyor..."
 
 msgid "Clock lost, selecting a new one\n"
-msgstr ""
+msgstr "Saat kayboldu, yenisi seçiliyor\n"
 
 msgid "Video sink to use (default is autovideosink)"
-msgstr ""
+msgstr "Kullanılacak video alıcı (varsayılan autovideosink)"
 
 msgid "Audio sink to use (default is autoaudiosink)"
-msgstr ""
+msgstr "Kullanılacak ses alıcı (varsayılan autoaudiosink)"
 
 msgid "Enable gapless playback"
-msgstr ""
+msgstr "Aralıksız çalmayı etkinleştir"
 
 msgid "Shuffle playlist"
-msgstr ""
+msgstr "Çalma listesini karıştır"
 
 msgid "Interactive control via keyboard"
-msgstr ""
+msgstr "Klavye ile etkileşimli kontrol"
 
 msgid "Volume"
-msgstr ""
+msgstr "Ses"
 
 msgid "Playlist file containing input media files"
-msgstr ""
+msgstr "Çalma listesi dosyası girdi medya dosyaları içeriyor"
 
 #, c-format
 msgid "Usage: %s FILE1|URI1 [FILE2|URI2] [FILE3|URI3] ..."
-msgstr ""
+msgstr "Kullanım: %s FILE1|URI1 [FILE2|URI2] [FILE3|URI3] ..."
 
 msgid "You must provide at least one filename or URI to play."
-msgstr ""
+msgstr "Çalmak için en azından bir dosya adı veya URI sağlamalısınız."
 
 #~ msgid "Uncompressed %s YUV %s"
 #~ msgstr "Sıkıştırılmamış %s YUV %s"
